--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "pci_tree.h": "c",
         "pit.h": "c",
         "term.h": "c",
-        "pci.h": "c"
+        "pci.h": "c",
+        "devs.h": "c"
     }
 }
