started to write the ahci (sata) driver

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "ide_io.h": "c",
         "pcie.h": "c",
         "acpi.h": "c",
-        "ahci_setup.h": "c"
+        "ahci_setup.h": "c",
+        "ide_pio.h": "c"
     }
 }
